<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Welcome_Text">Welcome</string>
    <string name="Instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="VS_text">V.S.</string>
    <string name="winMessage">You won!</string>
    <string name="loseMessage">You lost!</string>
    <string name="drawMessage">Draw!</string>
    <string name="computer">computer</string>
    <string name="Player">Player</string>
    <string name="historybutton">history</string>
    <string name="RemoveAll">Remove all games</string>
</resources>